Fix image URLs in Open Graph and Twitter Card meta tags
Updated Open Graph and Twitter Card image URLs to remove file extension.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="متجر أمين الزواحي الإلكتروني - أفضل المنتجات بأفضل الأسعار" />
     <meta property="og:description" content="تسوق بذكاء، عيش براحة. اكتشف أحدث المنتجات بأفضل الأسعار في متجر أمين الزواحي. نقدم لك تجربة تسوق فريدة وآمنة." />
-    <meta property="og:image" content="https://i.imgur.com/gfK8eV7.png" />
-    <meta property="og:url" content="https://aminzawahi-store.com" />
+    <meta property="og:image" content="https://i.imgur.com/gfK8eV7" />
+    <meta property="og:url" content="https://i.imgur.com/gfK8eV7.png[/img]" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="متجر أمين الزواحي" />
     <meta property="og:locale" content="ar_SA" />
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="متجر أمين الزواحي الإلكتروني - أفضل المنتجات بأفضل الأسعار">
     <meta name="twitter:description" content="تسوق بذكاء، عيش براحة. اكتشف أحدث المنتجات بأفضل الأسعار في متجر أمين الزواحي">
-    <meta name="twitter:image" content="https://i.imgur.com/gfK8eV7.png">
+    <meta name="twitter:image" content="https://i.imgur.com/gfK8eV7">
     
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
